# monadoptics

./: .envrc  .gitignore  CACHES.md  CHANGELOG.md  README.md  cabal.project  default.nix  hie.yaml  monadoptics.cabal  package.yaml  shell.nix
app/: Main.hs
lib/: Classes.hs  FunList.hs  Instances.hs  Lib.hs  MTL.hs  Optics.hs  Types.hs
nix/: sources.json
src/: Classes.hs  FunList.hs  Instances.hs  Main.hs  Optics.hs  Types.hs
