cabal-version:       >=1.10
name:                monadoptics
version:             0.1.0.0
license-file:        LICENSE
author:              Asad Saeeduddin
maintainer:          masaeedu@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  build-depends:       base >=4.12 && <4.13, mtl
  hs-source-dirs:      src
  default-language:    Haskell2010

executable monadoptics
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13, mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
